<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuzzer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_input">Enter a string to encode</string>
    <string name="edit_file_name">Barcode name to save</string>
    <string name="button_encode">Encode</string>
    <string name="button_random">Generate random code</string>
    <string name="title_activity_display_barcode">DisplayBarcodeActivity</string>
    <string name="upc">UPC</string>
    <string name="length_desc">Code Length</string>
    <string name="default_length">Default: 12</string>
    <string name="default_text">Waiting for input...</string>
    <string name="code128">Code 128</string>
    <string name="qr_code">QR code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
