<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/List"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/barcode_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/abc_ab_stacked_transparent_dark_holo" />

    <TextView
        android:id="@+id/barcode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_input" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inputToBarcode"
            android:text="@string/button_encode" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

       <RadioGroup
           android:id="@+id/barcode_type"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/qr_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/qr_code"
                android:onClick="onTypeSelected" />

            <RadioButton
                android:id="@+id/code128_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code128"
                android:onClick="onTypeSelected" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_random"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_random"
            android:onClick="randomToBarcode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/length_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_desc" />

            <EditText
                android:id="@+id/code_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="12"
                android:inputType="number" >

                <requestFocus />
            </EditText>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>